Fixed screen overflow on small screen - my MBP

--- a/css/flight_info.css
+++ b/css/flight_info.css
@@ -33,7 +33,7 @@ div {
 
 .inputPanel {
 	float: left;
-	padding-right: 40px;
+	padding-right: 35px;
 }
 
 #date, .ui-icon-calendar {
